static/less/_scaffolding.less
/*
* grids.less
*
*/

@headerHeight: 75px;

// our grid is 26 columns - total 1155px
@gridColumns: 26;
@gridColumnWidth: 30px;
@gridGutterWidth: 15px;

// main is our main content area underneath the header
@mainWidth: 1155px;
@mainMinHeight: 581px;
@mainVerticalPadding: 45px;
@mainMargin: 18px;
@marketplaceNavWidth: 180px;

// content is our main content area where most data for the current page is displayed
@pageTitleWidth: @gridGutterWidth * 65;
@contentBackground: @white;
@lineRuleBackground: @gray3;

*, :before, :after {
  .box-sizing(border-box);
}

body {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
}

#header {
  position: relative;
  background-color: @white;
  margin-left: @marketplaceNavWidth;
}

#main {
  background-color: @contentBackground;
  position: relative;
}

#marketplace-nav {
  background-color: @gray7;
  width: @marketplaceNavWidth;
  min-height: @mainMinHeight;
  position: absolute;
  height: 100%;
  position: fixed;
  z-index: 1;

  #marketplaces {
    .active {
      .sl-sb;
    }
  }
  .sidebar {
    padding: 0;

    > li {
      display: block;

      > a {
        .sl-sb;
        color: @gray4;
        padding: 12px;
        display: block;
        position: relative;
        text-decoration: none;

        &:hover {
          color: @white;
        }

        &:active {
          color: @white;
        }

        &.active {
          color: @white;
          border-left: 4px solid @persianBlue80;
        }

        &.expanded {
          color: @gray4;

          &:hover {
            color: @white;
          }

          &.active {
            color: @white;
            border-left: 4px solid @persianBlue80;
          }
        }

        [class^="icon-"] {
          margin-right: 6px;
          vertical-align: sub;
        }
      }

      .submenu {
        display: none;

        &.expanded {
          display: block;

          > li {
            line-height: 50px;
            background-color: @gray8;

            &:first-of-type {
              padding-top: 15px;
            }

            &:last-of-type {
              padding-bottom: 15px;
            }

          }

          a {
            .sl;
            color: @gray4;
            padding-left: 40px;
            padding-top: 5px;
            padding-bottom: 5px;
            background-color: @gray8;
            display: block;

            &.active, &:active, &:hover {
              color: @white;
            }
          }
        }
      }
    }
  }
}

.site-footer {
  background-color: @white;

  .section-title {
    .sl-sm;
    color: @gray5;
    display: inline-block;
    padding: 20px 0 10px 0;
  }

  .footer-link {
    display: inline-block;
    padding: 18px 8px;

    &:first-of-type {
        padding-left: 0px;
    }

    a {
        .sl-sm;
        color: @gray5;

        &:hover {
            color: @black;
        }
    }
  }
  .copyright-notice {
    .sl-sm;
    padding: 20px 5px;
  }

  a.icon {
    float: right;
    margin: 17px 10px;
    font-size: 20px;
    color: @gray3;

    &:hover {
        color: @black;
    }
  }
}

#notfound {
  .logo > img {
    padding-top: 50px;
    width: 145px;
  }

  h1 {
    padding-top: 150px;
    .num-xlg;
  }

  h3 {
    .sl-sb;
    border-bottom: 1px solid @gray3;
  }

  p {
    .sl-lg-lt;
    width: 350px;
    z-index: 10;
  }

  .next-steps {
    > div:first-of-type {
      padding-left: 0;
    }
    a {
      display: block;
      padding-bottom: 5px;
    }
  }

  .balloon {
    width: 110px;
    height: 160px;
    position: absolute;
    background-size: cover;

    &.red {
      top: 100px;
      right: 40%;
      background-image: url('../images/red_balloon.png');
      .animation(floatUpLeft, 2s, ease, infinite);
    }

    &.green {
      top: 100px;
      right: 10%;
      background-image: url('../images/green_balloon.png');
      .animation(floatUpRight, 4s, ease, infinite);
    }

    &.yellow {
      top: 400px;
      right: 25%;
      background-image: url('../images/yellow_balloon.png');
      .animation(floatDownLeft, 3s, ease, infinite);
    }
  }

  .cloud {
    position: absolute;
    top: 300px;
    background-image: url('../images/clouds.png');
    background-size: cover;
    background-repeat: repeat-x;
    width: 100%;
    height: 180px;
    opacity: 0.8;
    .animation(slideLeft, 22s, linear, infinite);
  }

  .cloud-rest {
    position: absolute;
    top: 480px;
    bottom: 0;
    background-color: @white;
    opacity: 0.8;
    width: 100%;
  }
}

